# 02_steam_gif_crop

./: .clangd  .gitignore  CMakeLists.txt  README.md  gifprocessor.cpp  gifprocessor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
